[tool.poetry]
name = "shazam-python"
version = "0.1.0"
description = ""
authors = ["nerdthejohn <newtonjohn043@gmail.com>"]
readme = "README.md"
packages = [{include = "shazam_python"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
scipy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
